[server] add namespacing filter to get count and delete