@@ -37,10 +37,10 @@ import java.util.List;
 import java.util.Map;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 import javax.ws.rs.core.MultivaluedMap;
+import org.checkerframework.checker.nullness.qual.NonNull;
 
-public class DaoFilterBuilder {
+public class DaoFilterUtils {
 
   private static final ImmutableSet<String> KEYWORDS = ImmutableSet.of("limit", "offset");
   private static final ImmutableMap<String, OPER> OPERATOR_MAP = ImmutableMap.<String, OPER>builder()
@@ -53,12 +53,51 @@ public class DaoFilterBuilder {
       .put("in", OPER.IN)
       .build();
   private static final Pattern PATTERN = Pattern.compile("\\[(\\w+)\\](\\S+)");
-  private final ImmutableMap<String, String> apiToBeanMap;
 
-  public DaoFilterBuilder(final ImmutableMap<String, String> apiToBeanMap) {
-    this.apiToBeanMap = apiToBeanMap;
+  public static DaoFilter buildFilter(
+      final MultivaluedMap<String, String> queryParameters,
+      final Map<String, String> apiToBeanMap,
+      final String namespace) {
+    final DaoFilter daoFilter = new DaoFilter();
+    optional(queryParameters.getFirst("limit"))
+        .map(Long::valueOf)
+        .ifPresent( limit -> {
+          ensure(limit >= 0, ERR_NEGATIVE_LIMIT_VALUE);
+          daoFilter.setLimit(limit);
+        });
+    optional(queryParameters.getFirst("offset"))
+        .map(Long::valueOf)
+        .ifPresent(offset -> {
+          ensureExists(daoFilter.getLimit(),ERR_OFFSET_WITHOUT_LIMIT);
+          ensure(offset >= 0, ERR_NEGATIVE_OFFSET_VALUE);
+          daoFilter.setOffset(offset);
+        });
+
+    final List<Predicate> predicates = buildPredicates(queryParameters, apiToBeanMap);
+    predicates.add(Predicate.EQ("namespace", namespace));
+    
+    return daoFilter.setPredicate(Predicate.AND(predicates.toArray(new Predicate[]{})));
   }
 
+  private static @NonNull List<Predicate> buildPredicates(
+      final MultivaluedMap<String, String> queryParameters,
+      final Map<String, String> apiToBeanMap) {
+    final List<Predicate> predicates = new ArrayList<>();
+    for (Map.Entry<String, List<String>> e : queryParameters.entrySet()) {
+      final String qParam = e.getKey();
+      if (KEYWORDS.contains(qParam)) {
+        continue;
+      }
+      final String columnName = ensureExists(
+          apiToBeanMap.get(qParam),
+          ERR_UNEXPECTED_QUERY_PARAM,
+          apiToBeanMap.keySet());
+      final Object[] objects = e.getValue().toArray();
+      predicates.add(toPredicate(columnName, objects));
+    }
+    return predicates;
+  }
+  
   @VisibleForTesting
   protected static Pair<OPER, String> toPair(final Object o) {
     final String s = o.toString();
@@ -77,46 +116,10 @@ public class DaoFilterBuilder {
   @VisibleForTesting
   protected static Predicate toPredicate(final String columnName, final Object[] objects) {
     final List<Predicate> predicates = Arrays.stream(objects)
-        .map(DaoFilterBuilder::toPair)
+        .map(DaoFilterUtils::toPair)
         .map(p -> new Predicate(columnName, p.getFirst(), p.getSecond()))
-        .collect(Collectors.toList());
+        .toList();
 
     return Predicate.AND(predicates.toArray(new Predicate[]{}));
-  }
-
-  public DaoFilter buildFilter(final MultivaluedMap<String, String> queryParameters) {
-    final DaoFilter daoFilter = new DaoFilter();
-    optional(queryParameters.getFirst("limit"))
-        .map(Long::valueOf)
-        .ifPresent( limit -> {
-          ensure(limit >= 0, ERR_NEGATIVE_LIMIT_VALUE);
-          daoFilter.setLimit(limit);
-        });
-    optional(queryParameters.getFirst("offset"))
-        .map(Long::valueOf)
-        .ifPresent(offset -> {
-          ensureExists(daoFilter.getLimit(),ERR_OFFSET_WITHOUT_LIMIT);
-          ensure(offset >= 0, ERR_NEGATIVE_OFFSET_VALUE);
-          daoFilter.setOffset(offset);
-        });
-
-    return daoFilter.setPredicate(buildPredicate(queryParameters));
-  }
-
-  private Predicate buildPredicate(final MultivaluedMap<String, String> queryParameters) {
-    final List<Predicate> predicates = new ArrayList<>();
-    for (Map.Entry<String, List<String>> e : queryParameters.entrySet()) {
-      final String qParam = e.getKey();
-      if (KEYWORDS.contains(qParam)) {
-        continue;
-      }
-      final String columnName = ensureExists(
-          apiToBeanMap.get(qParam),
-          ERR_UNEXPECTED_QUERY_PARAM,
-          apiToBeanMap.keySet());
-      final Object[] objects = e.getValue().toArray();
-      predicates.add(toPredicate(columnName, objects));
-    }
-    return predicates.size() == 0 ? null : Predicate.AND(predicates.toArray(new Predicate[]{}));
   }
 }
